--- a/react/src/index.css
+++ b/react/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -19,4 +20,9 @@ body {
   min-width: 320px;
   min-height: 100vh;
   min-height: 100svh;
+  background-color: rgb(216, 207, 197);
+}
+
+.font-poppins {
+  font-family: 'Poppins', sans-serif;
 }
