--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,3 +26,13 @@ body {
 .font-poppins {
   font-family: 'Poppins', sans-serif;
 }
+
+.popup-content {
+  margin: auto;
+  background: rgb(0, 0, 0);
+  width: 50%;
+  padding: 0.5rem;
+  color: white;
+  border: none;
+  border-radius: 1rem;
+}
