--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,7 +29,7 @@ body {
 
 .popup-content {
   margin: auto;
-  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0);
   width: 50%;
   padding: 0.5rem;
   color: white;
